--- a/lang/strings_english.txt
+++ b/lang/strings_english.txt
@@ -1,7 +1,7 @@
 <?php
 
 $s_plugin_AdminSetPassword_name = 'Admin Set Password';
-$s_plugin_AdminSetPassword_description = 'Displays an input field and button on "manage_user_edit_page" to change a users password directly.'
+$s_plugin_AdminSetPassword_description = 'Displays an input field and button on "manage_user_edit_page" to change a users password directly.';
 
 $s_plugin_AdminSetPassword_change_password = 'Change password';
 $s_plugin_AdminSetPassword_password_length = 'Enter a password with at least 6 characters.';
